--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,7 +30,7 @@ body {
   margin: auto;
 }
 
-#planet-facts {
+#planet-data {
   background-color: black;
   border: solid grey 1px;
   border-radius: 5px;
