--- a/client/src/static/CSS/SolarSystem.css
+++ b/client/src/static/CSS/SolarSystem.css
@@ -1,10 +1,20 @@
-#solarsystem {
+.solarsystem {
+    /* grid-column: 1 / -1 ;
+    grid-row: 2;
     margin-top: 70px;
     display: grid;
     grid:
         'image h3'
         'image solarinfo';
     grid-template-columns: 30% 70%;
+    position: absolute;
+    margin-left: 10%;
+    margin-top: 40%; */
+
+    position: relative;
+    /* height: 100%;
+    width: 100%; */
+    margin: 10px;
 }
 
 #allplanets {
