--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,16 @@ body {
   border-radius: 5px;
   margin: 20px;
 }
+
+.planets-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+.page-components{
+  display: inline-flex;
+  /* justify-content:; */
+  flex-flow: column nowrap;
+  gap: 10px;
+  margin: 20px;
+}
