test colour change

--- a/client/src/static/CSS/HomePage_style.css
+++ b/client/src/static/CSS/HomePage_style.css
@@ -1,12 +1,12 @@
 .carousel-container{
-    background-color: red;
+    /* background-color: red; */
     position: relative;
     max-height: 100rem;
     max-width: 100rem;
 }
 
 .solarsystem-container{
-    background-color: royalblue;
+    /* background-color: royalblue; */
     position: relative;
     max-height: 100rem;
     max-width: 100rem;
