--- a/client/src/static/CSS/PlanetQuiz.css
+++ b/client/src/static/CSS/PlanetQuiz.css
@@ -57,3 +57,21 @@ h1 {
 .score {
     justify-content: center;
 }
+
+.wrong-container {
+    display: flex;
+    margin-bottom: 0.5rem;
+    width: 100%;
+    font-size: 1.8rem;
+    border: 0.1rem solid rgb(86, 165, 235, 0.25);
+    background-color: red;
+}
+
+.right-container {
+    display: flex;
+    margin-bottom: 0.5rem;
+    width: 100%;
+    font-size: 1.8rem;
+    border: 0.1rem solid rgb(86, 165, 235, 0.25);
+    background-color: rgb(62, 198, 110);
+}
