--- a/client/src/static/CSS/HomePage_style.css
+++ b/client/src/static/CSS/HomePage_style.css
@@ -1,8 +1,9 @@
 .carousel-container{
     /* background-color: red; */
     position: relative;
-    max-height: 100rem;
-    max-width: 100rem;
+    min-height: 800px;
+    max-height: 100%;
+    /* max-width: 100rem; */
 }
 
 .solarsystem-container{
