--- a/client/src/static/CSS/PlanetCarousel.css
+++ b/client/src/static/CSS/PlanetCarousel.css
@@ -1,6 +1,6 @@
 .carousel{
     position:relative;
-    /* max-height: 100%;
-    max-width: 100%; */
+    /* min-height: 100%; */
+    /* max-width: 100%; */
     margin: 10px;
 }
