--- a/client/src/static/CSS/PlanetCarousel.css
+++ b/client/src/static/CSS/PlanetCarousel.css
@@ -4,3 +4,10 @@
     /* max-width: 100%; */
     margin: 10px;
 }
+
+#banner-image {
+    /* position: absolute;
+    z-index: 200;
+    transform: translateX(-50%);
+    top: 50%; */
+  }
