Home page image bugs fixed, nav bar styled

--- a/client/src/static/CSS/PlanetCarousel.css
+++ b/client/src/static/CSS/PlanetCarousel.css
@@ -6,8 +6,9 @@
 }
 
 #banner-image {
-    /* position: absolute;
+    position: absolute;
     z-index: 200;
     transform: translateX(-50%);
-    top: 50%; */
+    top: 0;
+    width: 75%;
   }
