link added to carousel page and animated

--- a/client/src/static/CSS/PlanetCarousel.css
+++ b/client/src/static/CSS/PlanetCarousel.css
@@ -12,3 +12,20 @@
     top: 0;
     width: 75%;
   }
+
+  #easteregg {
+    width: 40px;
+    position: absolute;
+    top: 5px;
+    left: 10px;
+    animation: rotation 10s infinite linear;
+  }
+
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
