--- a/client/src/static/CSS/EasterEgg.css
+++ b/client/src/static/CSS/EasterEgg.css
@@ -1,5 +1,5 @@
 #info {
-    width:50%;
+    width:40%;
     border: solid grey 1px;
     position: absolute;
     filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.344));
@@ -7,45 +7,36 @@
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.603);
     /* put in absolute centre */
-    left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(20%, -40%);
     z-index: 100;
 }
 
 #monkey {
-    /* max-width: 20px; */
     position: absolute;
-    bottom: 10%;
+    bottom: 5%;
+    width: 50%;
     transform: translate(-50%);
     right: 0px;
-    animation: float 5s infinite linear;
+    animation: float 15s infinite linear;
   }
 
 #tortoise {
-    /* max-width: 20px; */
     position: absolute;
     top: 20%;
     transform: translate(-50%);
     left: 5%;
+    z-index: 100;
     animation: rotation 30s infinite linear;
   }
 
-
-#cat {
-    /* max-width: 20px; */
+#rocket {
     position: absolute;
-    top: 70%;
-    left: 15%;
-    animation: float 5s infinite linear;
-  }
-
-#test {
-    /* max-width: 20px; */
-    position: absolute;
+    width: 10%;
+    max-width: 150px;
     bottom: -100px;
-    left: 55%;
     animation: fly 10s infinite linear;
+    z-index: -1;
   }
 
   @keyframes rotation {
@@ -64,6 +55,6 @@
   }
 
   @keyframes fly {
-    from { transform: translateY(0px)}
-    to { transform: translateY(-1200px)}
+    from { transform: translateX(0px) translateY(0px) rotate(30deg)}
+    to { transform: translateX(1200px) translateY(-1200px) rotate(30deg)}
   }
