--- a/client/src/static/CSS/SolarSystem.css
+++ b/client/src/static/CSS/SolarSystem.css
@@ -13,12 +13,15 @@
 
     position: relative;
     margin: 10px;
+    padding: 20px;
+    border: solid grey 1px;
+    border-radius: 5px;
 }
 
 #allplanets {
     grid-area: image;
-    width: 80%;
-    padding: 30px;
+    width: 90%;
+    padding-top: 50px;
 }
 
 div > h3 {
@@ -29,4 +32,14 @@ div > h3 {
 #solarinfo {
     display: flex;
     justify-content:start;
+}
+
+.list-item {
+    
+    display: flex;
+    justify-content: start;
+    padding-left: 25px;
+    background-image: url(../EarthAvatar.jpeg);
+    background-size: 15px;
+    background-repeat: no-repeat;
 }
