--- a/client/src/static/CSS/NavHeader.css
+++ b/client/src/static/CSS/NavHeader.css
@@ -1,27 +1,34 @@
-.Nav {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.Nav button {
+.navbar button {
     Margin: 10px;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.493);
     color: white;
     border: solid 1px white;
-    height: 40px;
+    height: 25px;
     margin-top: 20px;
     border-radius: 20px;
-    width: 100px;
+    width: 70px;
     position: relative;
     top: -15px;
 }
 
-/* .Nav > button > :hover {
-    background-color: white;
-    color: black;
-} */
-
 .banner-logo {
-    height: 50px;
+    width: 50%;
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
+
+#easteregg {
+    width: 2%;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    animation: rotation 5s infinite linear;
+  }
+
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
