--- a/client/src/static/CSS/PlanetCarousel.css
+++ b/client/src/static/CSS/PlanetCarousel.css
@@ -11,30 +11,8 @@
     transform: translateX(-50%);
     top: 0;
     width: 75%;
-  }
-
-  #easteregg {
-    width: 2%;
-    max-width: 20px;
-    position: absolute;
-    top: 5px;
-    left: 10px;
-    animation: rotation 5s infinite linear;
-  }
-
-  @keyframes rotation {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-    }
-  }
-
-  @keyframes float {
-    0% { transform: translateY(30px) rotate(0deg); }
-    50% { transform: translateY(0px) rotate(15deg); }
-    100% { transform: translateY(30px) rotate(0deg); }
+    border-radius: 5px;
+    filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.344));
   }
 
   #arrow-l {
@@ -63,9 +41,8 @@
   }
   
   #planet-info {
-    padding: 20px;
+    padding-bottom: 20px;
     line-height: 25px;
-
     background-color: white;
     color: black;
     border-bottom-left-radius: 5px;
@@ -74,14 +51,38 @@
     width: 18em;
     margin: auto;
   }
+
+  .planet-button {
+    background-color: black;
+    color: white;
+    position: relative;
+    top: -20px;
+    padding: 10px;
+    border: solid grey 1px;
+    border-radius: 20px;
+    width: 150px;
+  }
   
   #planet-data {
     background-color: black;
     border: solid grey 1px;
     border-radius: 5px;
-    margin: 20px;
+    margin: auto;
+    margin-top: 40px;
+    width: 75%;
+    padding: 20px;
   }
-  
+
+  #planet-data button {
+    border: solid white 1px;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 20px;
+    margin: 10px;
+    background-color: transparent;
+    color: white;
+  }
   
   #planet-slide-block {
     margin-top: 20%;
