--- a/client/src/static/CSS/SolarSystem.css
+++ b/client/src/static/CSS/SolarSystem.css
@@ -10,18 +10,18 @@
     position: absolute;
     margin-left: 10%;
     margin-top: 40%;
-
     position: relative;
     margin: 10px;
     padding: 20px;
     border: solid grey 1px;
     border-radius: 5px;
+    background: rgba(0, 0, 0, 0.685);
 }
 
 #allplanets {
     grid-area: image;
     width: 90%;
-    padding-top: 50px;
+    background-position: center;
 }
 
 div > h3 {
@@ -35,10 +35,10 @@ div > h3 {
 }
 
 .list-item {
-    
-    display: flex;
-    justify-content: start;
+    text-align: start;
     padding-left: 25px;
+    padding-bottom: 5px;
+    list-style-type: none;
     background-image: url(../EarthAvatar.jpeg);
     background-size: 15px;
     background-repeat: no-repeat;
