--- a/client/src/static/CSS/chart_style.css
+++ b/client/src/static/CSS/chart_style.css
@@ -6,7 +6,10 @@
 }
 
 .chart-one {
-    background-color: rgba(122, 47, 101, 0.5);
+    /* background-color: rgba(183, 126, 216, 0.5); */
+    border: 20px;
+    border: thick;
+    border-color: white;
     border-radius: 20px;
     margin: 1%;
     padding: 10px;
@@ -15,7 +18,7 @@
 }
 
 .chart-two {
-    background-color: rgba(122, 47, 101, 0.5);
+    /* background-color: rgba(122, 47, 101, 0.5); */
     border-radius: 20px;
     margin: 1%;
     padding: 10px;
@@ -24,7 +27,7 @@
 }
 
 .chart-three {
-    background-color: rgba(122, 47, 101, 0.5);
+    /* background-color: rgba(122, 47, 101, 0.5); */
     border-radius: 20px;
     margin: 1%;
     padding: 10px;
@@ -33,7 +36,7 @@
 }
 
 .chart-four {
-    background-color: rgba(122, 47, 101, 0.5);
+    /* background-color: rgba(122, 47, 101, 0.5); */
     border-radius: 20px;
     margin: 1%;
     padding: 10px;
